Moved from URL to URI as default contract. Noted method with URL as Deprecated.